0.70-dev
----

0.60-dev
----
changed version scheme
prefix flownames and content elements
option not to change original DOM
style-element creation through JS options
allow for layout change event to be configurable

0.25.0
----
Add footnote support for dynamic contents
Increased requirement to Chrome 25

0.23.1
----
Added footnote support for static content (reflow has to be enabled)
Added multi column support

0.23.0
----
First stable version (version number correponds to Chrome version this can run under)